--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
 
 		  /* Styles de base */
 		  body {
-			font-family: 'Bitter', serif;
-			
+			font-family: 'Bitter', serif;	
 			color: #259;
 		  }
 		  .container {
+			background-color: #eef;
+		  }
+		  .jumbotron {
 			background-color: #eef;
 		  }
 		  nav img {
@@ -46,6 +48,9 @@
 
 		  /* Styles pour les tablettes */
 		  @media (min-width: 768px) {
+			.jumbotron h1{
+				font-size: 42px;
+			}
 			.container {
 				padding: 0;
 			}
@@ -64,6 +69,9 @@
 
 			/* Styles pour les écrans moyens et grands */
 			@media (min-width: 992px) {
+			.jumbotron h1{
+				font-size: 48px;
+			}
 			.container {
 				padding: 0;
 			}
@@ -85,18 +93,24 @@
 
 	<body>
 		<div class="container">
-			<header>
-				<a href="#"><img src="assets/img/maison.png" alt="logo"></a>
-				<h1>La maison de l'architecte</h1>        
+			<header class="jumbotron">
+			<div class="row">
+				<div class="hidden-xs col-sm-2 col-md-2" >
+					<a href="#"><img src="assets/img/maison.png" alt="logo" class="hidden-xs" ></a>
+				</div>
+				<div class="col-xs-12 col-sm-8 col-md-8">
+					<h1 class="text-center">La maison de l'architecte</h1>
+				</div>
+			</div>
 			</header>
-		
+			
 			<nav class="row">
 				<div class="col-sm-12 col-md-8" >
-						<div id="left" >
-							<a href="#"><img src="assets/img/city1.jpg" alt="Nos réalisations"></a>
-						</div>
+					<div id="left" >
+						<a href="#"><img src="assets/img/city1.jpg" alt="Nos réalisations"></a>
+					</div>
 				</div>
-					
+						
 				<div class="col-sm-12 col-md-4" >
 					<div class="row" >
 						<div class="col-sm-6 col-md-12" >
@@ -114,15 +128,14 @@
 			</nav>
 
 			<footer class="row">
-			<div class="col-md-12">
-				<a class="btn btn-primary" href="#"><i class="fa fa-twitter fa-2x"></i></a>
-				<a class="btn btn-primary" href="#"><i class="fa fa-facebook fa-2x"></i></a>
-				<a class="btn btn-primary" href="#"><i class="fa fa-google-plus fa-2x"></i></a>
-				<a class="btn btn-primary" href="#"><i class="fa fa-flickr fa-2x"></i></a>
-				<a class="btn btn-primary" href="#"><i class="fa fa-spotify fa-2x"></i></a>
-			</div>
+				<div class="col-md-12">
+					<a class="btn btn-primary" href="#"><i class="fa fa-twitter fa-2x"></i></a>
+					<a class="btn btn-primary" href="#"><i class="fa fa-facebook fa-2x"></i></a>
+					<a class="btn btn-primary" href="#"><i class="fa fa-google-plus fa-2x"></i></a>
+					<a class="btn btn-primary" href="#"><i class="fa fa-flickr fa-2x"></i></a>
+					<a class="btn btn-primary" href="#"><i class="fa fa-spotify fa-2x"></i></a>
+				</div>
 			</footer>
-		
 		</div>
 	</body>
 
